# lode

./: .gitattributes  .gitignore  AGENTS.md  CHANGELOG.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  SECURITY.md  deny.toml  rust-toolchain.toml  rustfmt.toml  security.txt  skills-lock.json
.cargo/: config.toml
.github/: dependabot.yml
.github/workflows/: ci.yml  release.yml
.prompt_suite/context/: permission_boundary.yaml  project_context.yaml  verification_requirements.yaml
.prompt_suite/contracts/: generated_output_contract.yaml  universal_execution_contract.md
artifacts/dependencies/: dependency_inventory.json  software_bill_of_materials.json  upgrade_impact_matrix.json
artifacts/documentation/: documentation_inventory.json
artifacts/inventory/: command_inventory.json  component_map.json  entry_point_map.json  repository_inventory.json
artifacts/orchestration/: consolidated_findings.json
artifacts/project_health/: contradiction_register.json  human_decision_register.json  project_health_scorecard.json  remaining_work_backlog.json
artifacts/release/: accepted_risk_register.json  release_gate_scorecard.json
artifacts/security/: attack_path_register.json  attack_surface_map.json  secret_exposure_register.json  security_findings.json  threat_register.json  trust_boundary_map.mmd
crates/lode-cli/: Cargo.toml  README.md
crates/lode-cli/src/: main.rs  output.rs
crates/lode-cli/src/cmd/: add.rs  adopt.rs  agent.rs  agent_sim.rs  archetype.rs  assets.rs  audit.rs  cache.rs  check.rs  commands.rs  completions.rs  config.rs  context.rs  daemon.rs  depgraph.rs  diagnose.rs  docs.rs  doctor.rs  env.rs  env_snapshot.rs  export.rs  file.rs  fix.rs  git.rs  handoff.rs  hooks.rs  info.rs  init.rs  license.rs  lock.rs  log.rs  lsp.rs  mcp.rs  metrics.rs  migration.rs  mod.rs  output.rs  pack.rs  pkg.rs  plan.rs  (+28 more)
crates/lode-cli/src/mcpserver/: error.rs  mod.rs  prompts.rs  resources.rs  schema.rs  tools.rs
crates/lode-cli/tests/: cli.rs  commands.rs  integration.rs  test_assets_installer.rs  test_config.rs  test_git.rs  test_hooks.rs  test_init.rs  test_integration.rs  test_misc.rs  test_pkg.rs  test_release.rs  test_security.rs  test_workspace.rs
crates/lode-cli/tests/common/: mod.rs
crates/lode-core/: Cargo.toml  README.md
crates/lode-core/src/: adopt.rs  agent.rs  agent_sim.rs  archetype.rs  assets.rs  audit.rs  cache.rs  catalog.rs  commands.rs  config.rs  context.rs  contract.rs  convention.rs  dep_graph.rs  diagnose.rs  env.rs  env_snapshot.rs  error.rs  file_manifest.rs  fs_safety.rs  git.rs  handoff.rs  hooks.rs  install.rs  ipc.rs  lib.rs  license.rs  lockfile.rs  migration.rs  organization.rs  pkg.rs  plan.rs  policies.rs  prereq.rs  process.rs  receipt.rs  recipe.rs  redact.rs  registry.rs  release.rs  (+19 more)
crates/lode-core/src/config/: agent.rs  assets.rs  build.rs  convention.rs  daemon.rs  env.rs  git.rs  identity.rs  license.rs  mcp.rs  metrics.rs  migrations.rs  mod.rs  pkg.rs  preferences.rs  prereq.rs  recipe.rs  scaffold.rs  serve.rs  signature.rs  snippets.rs  stack.rs  time.rs  toolchain.rs  workspace.rs
crates/lode-core/src/config/migration_test_data/: mod.rs
crates/lode-core/tests/: integration.rs
crates/lode-daemon/: Cargo.toml  README.md
crates/lode-daemon/src/: handlers.rs  idle.rs  ipc.rs  lib.rs  main.rs  state.rs  watcher.rs
crates/lode-lsp/: Cargo.toml  README.md
crates/lode-lsp/src/: lib.rs  main.rs
crates/lode-mcp/: Cargo.toml  README.md
crates/lode-mcp/src/: error.rs  lib.rs  main.rs  prompts.rs  resources.rs  schema.rs  server.rs  transport.rs  util.rs
crates/lode-mcp/src/tools/: agent.rs  config.rs  convention.rs  env.rs  git.rs  health.rs  lifecycle.rs  mod.rs  pkg.rs  registry.rs  release.rs  secrets.rs  signature.rs  template.rs  template_bundle.rs  time.rs  toolchain.rs
crates/lode-tui/: Cargo.toml  README.md
crates/lode-tui/src/: app.rs  ipc.rs  lib.rs  main.rs  theme.rs
crates/lode-tui/src/panes/: activity.rs  deps.rs  files.rs  metrics.rs  mod.rs  overview.rs  registry.rs  time.rs
crates/lode-tui/src/widgets/: bar_chart.rs  heatmap.rs  mod.rs  score_ring.rs  sparkline.rs  status_bar.rs
docs/: index.md
docs/architecture/: index.md
docs/guides/: index.md  troubleshooting.md
docs/operations/: index.md
docs/reference/: commands.md  config.md  index.md  lsp.md  mcp_tools.md  plugins.md  recipes.md  snippets.md  template_bundles.md  templates.md
docs/user_manual/: agents.md  daemon.md  index.md  installation.md  mcp.md  plugins.md  project_setup.md  quick_start.md  recipes.md  secrets.md  snippets.md  templates.md
extensions/lode.nvim/: README.md
extensions/lode.nvim/lua/lode/: commands.lua  config.lua  diagnostics.lua  init.lua
extensions/lode.nvim/plugin/: lode.vim
extensions/vscode-lode/: .vscodeignore  README.md  package-lock.json  package.json  tsconfig.json
extensions/vscode-lode/src/: extension.ts  lsp.ts
extensions/zed-lode/: Cargo.toml  README.md  extension.toml
extensions/zed-lode/src/: lib.rs
fuzz/: Cargo.toml  README.md
fuzz/fuzz_targets/: process_validation.rs  validated_root.rs
logs/release/: release_validation_log.txt
npm/lode-assets/: package.json
plans/dependencies/: dependency_upgrade_plan.md
plans/orchestration/: specialist_execution_plan.md
plans/project_health/: phased_improvement_plan.md
plans/release/: release_action_plan.md
plans/security/: security_remediation_roadmap.md  security_validation_plan.md
reports/dependencies/: dependency_supply_chain_report.md
reports/discovery/: project_discovery_report.md
reports/documentation/: documentation_generation_report.md
reports/orchestration/: project_orchestration_report.md
reports/project_health/: project_health_completeness_audit_report.md
reports/release/: release_readiness_report.md
reports/security/: security_audit_report.md  threat_model.md
tools/dlltool-stub/: README.md
tools/dlltool-stub/src/: main.rs
