[workspace]
members = [
    "crates/lode-core",
    "crates/lode-cli",
]
resolver = "2"

[workspace.package]
edition = "2021"
license = "MIT OR Apache-2.0"
repository = "https://github.com/lode-rs/lode"
version = "0.1.0"

[workspace.dependencies]
anyhow = "1.0"
assert_cmd = "2.0"
camino = { version = "1.1", features = ["serde1"] }
clap = { version = "4.5", features = ["derive"] }
dirs = "5.0"
predicates = "3.1"
ratatui = "0.28"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tempfile = "3.10"
thiserror = "1.0"
toml = "0.8"
crossterm = "0.28"
