[workspace]
members = [
    "crates/lode-core",
    "crates/lode-cli",
    "crates/lode-daemon",
    "crates/lode-tui",
    "crates/lode-lsp",
    "crates/lode-mcp",
]
exclude = [
    "fuzz",
    "extensions/zed-lode",
]
resolver = "2"

[workspace.package]
edition = "2021"
license = "MIT"
repository = "https://github.com/manojpisini/lode"
homepage = "https://github.com/manojpisini/lode"
version = "0.1.1"
authors = ["lode-rs contributors"]

[workspace.dependencies]
assert_cmd = "2.0"
camino = { version = "1.1", features = ["serde1"] }
clap = { version = "4.5", features = ["derive"] }
dirs = "6.0"
predicates = "3.1"
ratatui = "0.28"
serde = { version = ">=1.0.200", features = ["derive"] }
serde_json = ">=1.0.120"
tempfile = "3.10"
thiserror = ">=1.0.60"
toml = "0.8"
crossterm = "0.28"
regex = ">=1.10"
tokio = { version = "1", features = ["rt", "macros", "sync", "time", "signal", "io-util", "fs", "net"] }
notify = ">=6.1"
sha2 = "0.11"
aes-gcm = "0.10"
getrandom = "0.4"

# To measure code coverage:
# cargo install cargo-llvm-cov
# cargo llvm-cov --workspace --lcov --output-path lcov.info
