[package]
name = "lode-core"
edition.workspace = true
license.workspace = true
repository.workspace = true
version.workspace = true
description = "Core library for LODE: config, rules, secrets, scaffolding, git, env, templates, and security"
documentation = "https://docs.rs/lode-core/latest/lode_core/"
readme = "README.md"
homepage.workspace = true
authors.workspace = true

[dependencies]
camino.workspace = true
dirs.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
toml.workspace = true
regex.workspace = true
sha2.workspace = true
aes-gcm.workspace = true
getrandom.workspace = true

[dev-dependencies]
tempfile.workspace = true
