[package]
name = "lode-daemon"
edition.workspace = true
license.workspace = true
repository.workspace = true
version.workspace = true
description = "Background file watcher daemon for LODE with IPC communication and idle watchdog"
documentation = "https://docs.rs/lode-daemon/latest/lode_daemon/"
homepage.workspace = true
authors.workspace = true

[dependencies]
lode-core = { path = "../lode-core", version = "0.1.0" }
serde.workspace = true
serde_json.workspace = true
camino.workspace = true
thiserror.workspace = true
clap.workspace = true
tokio.workspace = true
notify.workspace = true

[dev-dependencies]
tempfile.workspace = true
