[package]
name = "lode-lsp"
edition.workspace = true
license.workspace = true
repository.workspace = true
version.workspace = true
description = "LSP protocol server for LODE over JSON-RPC (stdin/stdout)"
documentation = "https://docs.rs/lode-lsp/latest/lode_lsp/"
readme = "README.md"
homepage.workspace = true
authors.workspace = true

[dependencies]
lode-core = { path = "../lode-core", version = "0.1.1" }
serde.workspace = true
serde_json.workspace = true

[package.metadata.docs.rs]
all-features = true
