[package]
name = "lode-tui"
edition.workspace = true
license.workspace = true
repository.workspace = true
version.workspace = true

[[bin]]
name = "lode-tui"
path = "src/main.rs"

[dependencies]
lode-core = { path = "../lode-core" }
serde.workspace = true
serde_json.workspace = true
ratatui.workspace = true
crossterm.workspace = true
camino.workspace = true
tokio = { version = "1", features = ["full", "net"] }
