[package]
name = "lode-tui"
edition.workspace = true
license.workspace = true
repository.workspace = true
version.workspace = true
description = "Terminal UI dashboard for LODE with 7 panes and custom widgets"
documentation = "https://docs.rs/lode-tui/latest/lode_tui/"
readme = "README.md"
homepage.workspace = true
authors.workspace = true

[[bin]]
name = "lode-tui"
path = "src/main.rs"

[dependencies]
lode-core = { path = "../lode-core", version = "0.1.1" }
camino.workspace = true
serde.workspace = true
serde_json.workspace = true
ratatui.workspace = true
crossterm.workspace = true

[package.metadata.docs.rs]
all-features = true
